# justplotme

./: .gitignore  LICENSE  README.md  example.ipynb  package-lock.json  pyproject.toml
src/justplotme/: __init__.py  llm.py
src/justplotme/static/: widget.css  widget.js
src/plotme/: __init__.py
src/plotme/static/: widget.css  widget.js
