[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "justplotme"
version = "0.0.0"
dependencies = [
  "anywidget",
  "bs4",
  "markdown",
  "openai",
  "pandas",
  "plotly",
]
readme = "README.md"
authors = [
  {name = "nuwandavek", email = "vivekaithal44@gmail.com"},
]

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]
